# Ravebear_alpha

./: .gitignore  Makefile  PATCH_ORDERBOOK.py  README.md  RUNNING_ON_WINDOWS.md  START.bat  config.py  main_collector.py  pyproject.toml  run_collector.py
analysis/: void_wall_detector.py
data_labeled/: system_test_input_labeled.jsonl
features/: __init__.py  derivatives.py  liquidity.py  orderflow.py  session.py  vwap.py  wick_geometry.py
feeds/: coinalyze_derivs.py  coingecko_macro.py  discord_notifier.py  okx_orderbook.py  okx_trades.py  regime_sources.py
schema/: schema_v1.json
scripts/: build_exe.bat  feature_report.py  label_engine.py  smoke_collect.py  start_wick_engine.bat  system_test.py
storage/: jsonl_writer.py
tests/: test_derivatives.py  test_fixtures_parsing.py  test_label_engine.py  test_liquidity.py  test_orderflow.py  test_repair_pack_v1.py  test_session.py  test_vwap.py
tests/fixtures/: okx_orderbook_message.json  okx_trade_message.json
tools/: command_center.py  command_center_v2.py  dashboard.html  dashboard_server.py  dashboard_term.py  validate_events.py
utils/: aggregation.py  logging.py
