[project]
name = "wick-engine-v2"
version = "0.1.0"
description = "Modular streaming data collector for trading research"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "websockets>=11.0",
    "aiohttp>=3.9",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "uvloop>=0.17; sys_platform != 'win32'", # Optional, not for Windows
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
